style fixes on mobile view

--- a/src/component/Menu/Menu.style.scss
+++ b/src/component/Menu/Menu.style.scss
@@ -30,11 +30,12 @@
                     display: flex;
                     justify-content: center;
                     width: 33.33%;
+                    height: auto;
 
                     .GenderButton-Button {
                         height: 30px;
                         margin-top: 6px;
-                        padding: 0 15px;
+                        padding: 0 4px;
                     }
                 }
             }
